Wed Aug  7 07:05:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO-INSTALL.html:
        * TAO_IDL/ast/ast_string.cpp:
        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
        * TAO_IDL/be/be_visitor_attr_setarg_type.cpp:
        * TAO_IDL/be/be_visitor_null_return_value.cpp:
        * TAO_IDL/include/ast_generator.h:
        * orbsvcs/ImplRepo_Service/Adapter_Activator.h:
        * orbsvcs/ImplRepo_Service/AsyncAccessManager.h:
        * orbsvcs/ImplRepo_Service/AsyncListManager.h:
        * orbsvcs/ImplRepo_Service/Forwarder.h:
        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Persistent_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Storable_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Storable_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Storable_Naming_Context_Factory.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
        * orbsvcs/orbsvcs/Trader/Trader.h:
        * orbsvcs/tests/Event/Performance/Connect.h:
        * orbsvcs/tests/Event/Performance/Connect.cpp:
        * orbsvcs/tests/Notify/Bug_3252_Regression/server.cpp:
        * tao/Dynamic_TP/DTP_POA_Strategy.h:
        * tao/Incoming_Message_Stack.h:
        * tao/Storable_Base.h:
        * tao/Storable_FlatFileStream.h:
        * tao/Storable_FlatFileStream.cpp:
        * tests/Bug_3941_Regression/test.cpp:
        * tests/DynValue_Test/ValueTypes_impl.h:
          Revived port for Embarcadero C++ Builder XE4 using bcc32

          commit b9b08e429017ccd9cd15bafb5b7d461e6c7706e2
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Thu Aug 1 20:36:14 2013 +0200

                    Fixed incorrect debug message and ambiguity with bcc32
                  * TAO/tests/Bug_3941_Regression/test.cpp:
