@@ -1,3 +1,9 @@
+Wed Aug  7 09:43:50 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/tests/unit/Notify/MC/MonitorManager/MonitorClient.cpp:
+        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
+          Code changes to cleanup scoreboard
+
 Wed Aug  7 07:05:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO-INSTALL.html:
